# ISA

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  delivery.md  final-result.md  goal.md  log.md  metadata.md  mission.md
assets/audio/: README.md
assets/fonts/: README.md
context/: .gitignore  context.md
docs/agent/: agent-iteration-log.md
docs/architecture/: mvvm-architecture.md
docs/architecture/decisions/: 0001-strict-mvvm.md  0002-pure-model-and-dtos.md  0003-strategies-and-boss-states.md  0004-fixed-timestep.md  0005-resource-boundary.md
docs/assets/: asset-sources.md
docs/defense/: course-defense-guide.md
docs/design/: easyisaac-visual-parity.md
docs/progress/: README.md
docs/research/: wiki-research.md
feedback/: feedback0.md
src/app/: Application.cpp  Application.h  main.cpp
src/common/: Binding.h  GameTypes.h  MathTypes.h  PresentationTypes.h
src/model/: BossSystem.cpp  BossSystem.h  CharacterCatalog.cpp  CharacterCatalog.h  Components.cpp  Components.h  EnemySystem.cpp  EnemySystem.h  GameSession.cpp  GameSession.h  GameSessionInterface.h  ItemSystem.cpp  ItemSystem.h  Level.cpp  Level.h  Player.cpp  Player.h  Projectile.h
src/resource/: AssetCatalog.h  ResourceManager.cpp  ResourceManager.h
src/view/: EndingPresentation.h  GameView.cpp  GameView.h
src/viewmodel/: Binding.h  GameViewModel.cpp  GameViewModel.h  InputCommand.h  RenderDTO.h
tests/architecture/: check_architecture.cmake
tests/assets/: check_assets.cmake
tests/model/: course_demo.cpp  test_main.cpp
tests/resource/: test_resource.cpp
tests/view/: test_ending_presentation.cpp
tests/viewmodel/: test_flow.cpp  test_model_seam.cpp
